--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
         .section-header-awards {
             text-align: center; margin-bottom: 2rem;
             /* اصلاح پس‌زمینه تایتل جوایز برای خوانایی */
+            display: table; /* برای اینکه باکس فقط به اندازه محتوا عرض بگیرد */
+            margin: 0 auto; /* وسط چین کردن باکس در صفحه دسکتاپ */
             background: rgba(255, 255, 255, 0.8);
             backdrop-filter: blur(5px);
             display: inline-block;
@@ -1119,3 +1121,4 @@
     </script>
 </body>
 </html>
+
