--- a/index.html
+++ b/index.html
@@ -332,10 +332,10 @@
                 <div class="hero-content">
                     <div>
                         <span style="background: rgba(255,255,255,0.2); padding: 5px 15px; border-radius: 20px; font-size: 0.9rem;">
-                            🌱 طرح زیست محیطی ۱۴۰۳
+                            🌱 طرح زیست محیطی ۱۴۰۴
                         </span>
                         <h1 class="hero-title">هر مدرسه، نجات یک درخت<span class="title-accent">آینده‌ای سبز برای کرمان</span></h1>
-                        <p class="hero-desc">طرح بزرگ جمع‌آوری کاغذ باطله در مدارس استان کرمان. با مشارکت در این طرح، علاوه بر تجهیز مدرسه خود، به حفظ جنگل‌های بلوط کمک کنید.</p>
+                        <p class="hero-desc">طرح بزرگ جمع‌آوری پسماندهای با ارزش در مدارس استان کرمان. با مشارکت در این طرح، علاوه بر تجهیز مدرسه خود، به حفظ جنگل‌های ایران کمک کنید.</p>
                         
                         <div class="stat-cards-hero">
                             <div class="hero-stat-card">
@@ -421,8 +421,8 @@
                             <div class="slide-overlay"></div>
                             <div class="award-content">
                                 <div class="award-icon-box">🏆</div>
-                                <h3 class="award-title">تندیس زرین محیط زیست</h3>
-                                <p class="award-description">نشان رسمی و تقدیرنامه با امضای استاندار محترم + اعتبار نقدی</p>
+                                <h3 class="award-title">تندیس زرین حافظ محیط زیست</h3>
+                                <p class="award-description">نشان رسمی و تقدیرنامه با امضای مدیرکل محترم + اعتبار نقدی</p>
                                 <div class="award-prize-tag">معتبرترین نشان استانی</div>
                             </div>
                         </div>
@@ -628,10 +628,17 @@
                 <a href="#" onclick="showSection('home')" class="footer-link">صفحه اصلی</a>
                 <a href="#" onclick="showSection('stats')" class="footer-link">آمار و گزارش‌ها</a>
                 <a href="#" onclick="showSection('access')" class="footer-link">پنل مدیریت</a>
-                <a href="#" class="footer-link">تماس با ما</a>
-            </div>
+<div class="footer-section">
+    <h3>ارتباط با ما</h3>
+    <ul class="footer-links">
+        <li><a href="tel:03412345678">تلفن: ۰۳۴-۱۲۳۴۵۶۷۸</a></li>
+        <li><a href="mailto:kermangreentree@gmail.com">ایمیل: kermangreentree@gmail.com</a></li>
+        <li><a href="#">آدرس: کرمان، بلوار جمهوری اسلامی</a></li>
+        <li><a href="#">فرم تماس با ما</a></li>
+    </ul>
+</div>
             <div class="footer-copy">
-                &copy; ۱۴۰۳ طرح استانی درخت سبز کرمان. تمامی حقوق محفوظ است.
+                &copy; ۱۴۰۴ طرح استانی درخت سبز کرمان. تمامی حقوق محفوظ است.
             </div>
         </div>
     </footer>
@@ -1123,5 +1130,6 @@
     </script>
 </body>
 </html>
+
 
 
