--- a/index.html
+++ b/index.html
@@ -628,15 +628,8 @@
                 <a href="#" onclick="showSection('home')" class="footer-link">صفحه اصلی</a>
                 <a href="#" onclick="showSection('stats')" class="footer-link">آمار و گزارش‌ها</a>
                 <a href="#" onclick="showSection('access')" class="footer-link">پنل مدیریت</a>
-<div class="footer-section">
-    <h3>ارتباط با ما</h3>
-    <ul class="footer-links">
-        <li><a href="tel:03412345678">تلفن: ۰۳۴-۱۲۳۴۵۶۷۸</a></li>
-        <li><a href="mailto:kermangreentree@gmail.com">ایمیل: kermangreentree@gmail.com</a></li>
-        <li><a href="#">آدرس: کرمان، بلوار جمهوری اسلامی</a></li>
-        <li><a href="#">فرم تماس با ما</a></li>
-    </ul>
-</div>
+                <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=kermangreentree@gmail.com" target="_blank">ایمیل: kermangreentree@gmail.com</a></li>
+                </div>
             <div class="footer-copy">
                 &copy; ۱۴۰۴ طرح استانی درخت سبز کرمان. تمامی حقوق محفوظ است.
             </div>
@@ -1130,6 +1123,7 @@
     </script>
 </body>
 </html>
+
 
 
 
