--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                 <a href="#" onclick="showSection('home')" class="footer-link">صفحه اصلی</a>
                 <a href="#" onclick="showSection('stats')" class="footer-link">آمار و گزارش‌ها</a>
                 <a href="#" onclick="showSection('access')" class="footer-link">پنل مدیریت</a>
-                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kermangreentree@gmail.com" onclick="showSection('access')" class="footer-link">ارتباط با ما </a>
+                <a href="mailto:kermangreentree@gmail.com" class="footer-link">ارتباط با ما</a>
                 </div>
             <div class="footer-copy">
                 &copy; ۱۴۰۴ طرح استانی درخت سبز کرمان. تمامی حقوق محفوظ است.
@@ -1123,6 +1123,7 @@
     </script>
 </body>
 </html>
+
 
 
 
