--- a/index.html
+++ b/index.html
@@ -645,34 +645,34 @@
             "03": "بافت",
             "04": "بردسیر",
             "05": "بم",
-            "06": "جیرفت",
-            "07": "رابر",
-            "08": "راور",
-            "09": "رفسنجان",
-            "10": "رودبار جنوب",
-            "11": "ریگان",
-            "12": "زرند",
-            "13": "سیرجان",
-            "14": "شهربابک",
-            "15": "عنبرآباد",
-            "16": "فهرج",
-            "17": "فاریاب",
-            "18": "قلعه گنج",
-            "19": "کهنوج",
-            "20": "کوهبنان",
-            "21": "منوجان",
-            "22": "نرماشیر",
-            "23": "ناحیه ۱ کرمان",
-            "24": "ناحیه ۲ کرمان",
-            "25": "چترود",
-            "26": "راین",
-            "27": "شهداد",
-            "28": "گلباف",
-            "29": "ماهیان",
-            "30": "نوق",
-            "31": "کشکوئیه",
-            "32": "سیرچ",
-            "33": "خیرآباد" // اگر نام منطقه 33 متفاوت است، اینجا را ویرایش کنید
+            "06": "جازموریان",
+            "07": "جیرفت",
+            "08": "چترود",
+            "09": "رابر",
+            "10": "راور",
+            "11": "راین",
+            "12": "رفسنجان",
+            "13": "رودبار جنوب",
+            "14": "ریگان",
+            "15": "زرند",
+            "16": "سیرجان",
+            "17": "شهداد",
+            "18": "شهربابک",
+            "19": "عشایری کرمان",
+            "20": "عنبرآباد",
+            "21": "فاریاب",
+            "22": "فهرج",
+            "23": "قلع گنج",
+            "24": "ناحیه 1 کرمان",
+            "25": "ناحیه 2 کرمان",
+            "26": "کشکوئیه",
+            "27": "کوهبنان",
+            "28": "کهنوج",
+            "29": "گلباف",
+            "30": "ماهان",
+            "31": "منوجان",
+            "32": "نرماشیر",
+            "33": "نوق"
         };
 
         // --- داده‌های پیش‌فرض ---
@@ -1123,6 +1123,7 @@
     </script>
 </body>
 </html>
+
 
 
 
