--- a/index.html
+++ b/index.html
@@ -602,18 +602,44 @@
         // --- راهکار ۴: اتصال به دیتابیس ابری (JSONBin) ---
         // برای فعال سازی این بخش، باید در سایت jsonbin.io ثبت نام کنید و مقادیر زیر را جایگزین کنید.
         // تا زمانی که این مقادیر خالی باشند، سایت روی حالت "نمایشی" (لوکال) کار می‌کند.
-        const JSONBIN_API_KEY = "$2a$10$XXXXXXXXXXXXXXXXXXXX"; // کلید API خود را اینجا بگذارید
-        const JSONBIN_BIN_ID = "XXXXXXXXXXXX";   // شناسه BIN خود را اینجا بگذارید
+        const JSONBIN_API_KEY = "$2a$10$GT97IZNmARAoZTOriqAgNOpYDIxYDenC3m.MRkQ/lgAZLZQ82VgzG"; // کلید API خود را اینجا بگذارید
+        const JSONBIN_BIN_ID = "69260ffaae596e708f70bb15";   // شناسه BIN خود را اینجا بگذارید
 
         // --- دیکشنری نام مناطق ---
         const regionNames = {
-            "01": "ارزوئیه", "02": "انار", "03": "بافت", "04": "بردسیر", "05": "بم",
-            "06": "جازموریان", "07": "جیرفت", "08": "چترود", "09": "رابر", "10": "راور",
-            "11": "راین", "12": "رفسنجان", "13": "رودبار جنوب", "14": "ریگان", "15": "زرند",
-            "16": "سیرجان", "17": "شهداد", "18": "شهربابک", "19": "عشایری کرمان", "20": "عنبرآباد",
-            "21": "فاریاب", "22": "فهرج", "23": "قلع گنج", "24": "ناحیه 1 کرمان", "25": "ناحیه 2 کرمان",
-            "26": "کشکوئیه", "27": "کوهبنان", "28": "کهنوج", "29": "گلباف", "30": "ماهان",
-            "31": "منوجان", "32": "نرماشیر", "33": "نوق"
+            "01": "ارزوئیه",
+            "02": "انار",
+            "03": "بافت",
+            "04": "بردسیر",
+            "05": "بم",
+            "06": "جازموریان",
+            "07": "جیرفت",
+            "08": "چترود",
+            "09": "رابر",
+            "10": "راور",
+            "11": "راین",
+            "12": "رفسنجان",
+            "13": "رودبار جنوب",
+            "14": "ریگان",
+            "15": "زرند",
+            "16": "سیرجان",
+            "17": "شهداد",
+            "18": "شهربابک",
+            "19": "عشایری کرمان",
+            "20": "عنبرآباد",
+            "21": "فاریاب",
+            "22": "فهرج",
+            "23": "قلع گنج",
+            "24": "ناحیه 1 کرمان",
+            "25": "ناحیه 2 کرمان",
+            "26": "کشکوئیه",
+            "27": "کوهبنان",
+            "28": "کهنوج",
+            "29": "گلباف",
+            "30": "ماهان",
+            "31": "منوجان",
+            "32": "نرماشیر",
+            "33": "نوق"
         };
 
         // --- داده‌های برنامه ---
@@ -1032,3 +1058,4 @@
     </script>
 </body>
 </html>
+
