--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
             <div class="container">
                 <div class="section-header-awards">
                     <h2>جشنواره جوایز بزرگ سبز</h2>
-                    <p>تقدیر از تلاشگران حفظ محیط زیست با جوایز نفیس</p>
+                    <p>تقدیر از تلاشگران حافظ محیط زیست با جوایز نفیس</p>
                 </div>
                 
                 <div class="awards-slider" id="awardsSlider">
@@ -431,7 +431,7 @@
                             <div class="slide-overlay"></div>
                             <div class="award-content">
                                 <div class="award-icon-box">🏆</div>
-                                <h3 class="award-title">تندیس زرین محیط زیست</h3>
+                                <h3 class="award-title">تندیس حافظ محیط زیست</h3>
                                 <p class="award-description">نشان رسمی و تقدیرنامه با امضای مدیرکل محترم + اعتبار نقدی</p>
                                 <div class="award-prize-tag">معتبرترین نشان استانی</div>
                             </div>
@@ -1052,3 +1052,4 @@
     </script>
 </body>
 </html>
+
