--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
                 <a class="nav-link active-tab" onclick="showSection('home')">خانه</a>
                 <a class="nav-link" onclick="scrollToAwards()">جوایز</a>
                 <a class="nav-link" onclick="showSection('stats')">آمار استانی</a>
-                <a class="nav-link" onclick="showSection('school')">پروفایل مدرسه</a>
-                <a class="nav-link" onclick="showSection('office')">پروفایل اداره</a>
+                <a class="nav-link" onclick="showSection('school')">پروفایل مدرسه برتر</a>
+                <a class="nav-link" onclick="showSection('office')">پروفایل برتر</a>
                 <button class="nav-btn" onclick="showSection('access')">مدیریت</button>
             </div>
         </div>
@@ -1052,4 +1052,5 @@
     </script>
 </body>
 </html>
+
 
